@@ -21,6 +21,22 @@ placed in docker-compose.yml and never committed to the repo.  At the root level
 of the repo locally create a file called .env and save the Lastpass contents for
 "bi-api secrets" in this file.
 
+### Running tests in docker container
+
+If you have the docker socket (/var/run/docker.sock) and docker executable folder (/usr/bin/docker)
+mounted in your docker-compose.yml file, you will be able to run the biapi tests from within the docker container. 
+The default docker-compose file has these mounted. 
+
+The biapi tests use the hosts docker instance to spin up test database containers for integration tests. 
+
+NOTE: Do not run a production container with the docker socket mounted. While useful for testing and
+development, mounting the docker socket into a container is a large security risk. The application will
+still work fine without the docker socket mounted, but tests will fail. 
+
+To run the tests, use the following command:
+
+```docker exec -it biapi mvn test```
+
 ## Pull Request Criteria
 
 When evaluating a pull request for merge acceptance, verify that the following criteria are met:
@@ -34,7 +50,7 @@ This section is provided as an alternative to running the application in Docker.
 
 ### Prerequisites
 
-1. Java 12 SDK installed
+1. Java 13 SDK installed
 1. Maven installed (or via IDE)
 
 ### Project setup
@@ -52,32 +68,73 @@ Run this docker command in terminal to start up a postgres docker container with
 docker container run --name bidb -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=bidb -p 5432:5432 -d postgis/postgis:12-3.0
 ```
 
-### Build the app
-In `src/build/`, make a copy of `db.config.properties` as `db.config.dev.properties` (this file is ignored from git) and replace placeholder values.
+### Building the project
 
-After that, run:
+Once you have the project pulled down and your database running, follow these steps to build the project.
+
+#### Setting your environment variables
+
+You will need to specify variables specific to your environment in order to run the project. 
+
+Environment specific variables are specified in the following files:
+- src/build/build.config.properties
+- src/makeApplication-dev.yml.sh
+- src/makeApplication-test.yml.sh
+- settings.xml
+
+NOTE: Your application-dev.yml (see section 'Run the Project' and application-test.yml (see section 'Testing') will contain system specific variables, but will need to be updated manually. Update the structure of these files based on the makeApplication-dev.yml.sh file. 
+
+There are three options to specify these environmental variables: 
+1) Specify environmental variables in your system (this is what our docker build does)
+2) Specify environmental variables in your IntelliJ run configuration (recommended). 
+3) Edit the files above directly and replace the placeholders the environment variable placeholders with actual values. 
+
+See the .env file in the project's root directory for a list of environmental variables you will need to specify. 
+NOTES: 
+1) See the section `Creating admin user` on information of how to set the `ADMIN_ORCID` variable. 
+2) If using option 2 (IntelliJ) to specify environment variables, you will need to run all commands through a run configuration in IntelliJ. Running commands in terminal will not exposed the environment variables you set in your run configuration. 
+
+#### Creating admin user
+
+The project is created with an admin user that is then able to setup the system for end users through the UI. 
+The admin user will need to have a valid ORCID account. Once you retrieve the ORCID (through the ORCID site) 
+for the admin user, set the `ADMIN_ORCID` variable in the environmental variables (see section above).
+
+#### Install project dependencies
+
+After setting the values for your environment, run:
 
 ```
-mvn clean validate flyway:clean flyway:migrate install -P dev
+mvn clean validate install -D maven.test.skip=true --settings settings.xml
 ```
 
-This process will pull down all the application's dependencies to your local machine, create the application's database structure (with appropriate data), generate required source files (via JOOQ), run unit tests, and finally build the final JAR file. 
+This process will pull down all the application's dependencies to your local machine, 
+create the application's database structure (with appropriate data), generate required source files (via JOOQ), 
+and finally build the final JAR file. 
 
-### Run the app
+The command above will not run unit tests. If you want to run unit tests during the project's dependency installation
+remove the `-D maven.test.skip=true` command. Alternatively, you can run the tests separately, see the testing
+section below. 
 
-- You will need to create your user in the database table in order to log in successfully. Execute the following line in the sql executor of your choice (don't forget to populate the `values` of the query): 
+### Run the project
 
-```sql
-insert into bi_user (orcid, name) values ('xxxx-xxxx-xxxx-xxxx', '<name>');
-``` 
+Once the project dependencies are installed successfully, you can run the project. 
+
+#### Creating application.yml
+
+*Improvements coming soon!
+
+For now, you will need to manually specify the values in your application-dev.yml file. 
 
 - Create a application variable configuration file for the environment you plan to run the project under (```Ex.  application-dev.yml```).
 You can reference the `src/build/makeApplication-dev.yml.sh` file to see what information is needed in the
 variable configuration.
 
+#### Start the run
+
 *If running in an IDE (like IntelliJ)*:
 
-- Create an application run config with the main class being `org.breedinginsight.api.Application`
+- Create an `Application` run config with the main class being `org.breedinginsight.api.Application`
 - Pass VM options of: `--enable-preview --illegal-access=warn -Dmicronaut.environments=dev`
 
 *If running as a packaged JAR*:
@@ -86,7 +143,6 @@ variable configuration.
 java --enable-preview -Dmicronaut.environments=dev -jar bi-api*.jar
 ```
 
-
 ### Ongoing Development
 
 #### Updating the database
@@ -94,14 +150,14 @@ java --enable-preview -Dmicronaut.environments=dev -jar bi-api*.jar
 If you have run the project and the database once already, you will need to make sure your database is up to date by running: 
 
 ```
-mvn validate flyway:migrate -X -P dev
+mvn validate flyway:migrate -X
 ```
 
 
 If you don't care about losing any of the data in the database, run:
 
 ```
-mvn validate flyway:clean flyway:migrate -X -P dev
+mvn validate flyway:clean flyway:migrate -X
 ```
 
 ### Generating Java Classes via JOOQ
@@ -112,23 +168,19 @@ As structural database changes are made, you will need to re-generate Java class
 mvn clean generate-sources -P dev
 ```
 
+NOTE: This step is not necessary if a `mvn clean install` is run (see section Install Project Dependencies above).
+
 ### Testing
 
 #### Test database
 
-Run this docker command in terminal to start up a postgres docker container with the empty test database in it. 
-
-```
-docker container run --name bitest -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=bitest -p 8765:5432 -d postgis/postgis:12-3.0
-```
-
-Run migrate using the test profile to apply the migrates to the test database.
-
-```
-mvn validate flyway:clean flyway:migrate -X -P test
-```
+The test database is started as part of the tests in a separate docker container. The JOOQ classes for the tests
+are generated from the main database, so this will have to be up and running. The reference to the main database
+can be found in `src/build/build.config.properties`. 
 
 ### Run tests
+
+*Improvements coming soon! 
 
 Create a file, `application-test.yml` in the `src/test/resources` directory.
 You can reference the `src/build/makeApplication-dev.yml.sh` file to see what information is needed in the
@@ -137,9 +189,46 @@ variable configuration.
 Tests can be run with the following command:
 
 ```
-mvn test -P test
+mvn test
 ```
 
-They are also run as part of the install profile. In IntelliJ you can create test profiles for the tests to get easily readable output.
+They are also run as part of the install profile (if specified). 
+In IntelliJ, you can create test profiles for the tests to get easily readable output.
 
+### Troubleshooting
 
+If you are having errors to the effect of `invalid source release 12 with --enable-preview` and are using IntelliJ, change the jdk to 13 in the following places and it may help:
+
+1. File -> Project Structure -> Project Settings
+2. File -> Project Structure -> Modules -> Tab: Sources: Language Level
+3. File -> Project Structure -> Modules -> Tab: Dependencies: Module SDK
+4. Main -> Preferences -> Compiler -> Java Compiler -> Target bytecode version
+5. Run/Debug Configurations (Your run profiles) -> JRE select box
+
+Connection issues during build: 
+
+1. Check that you all of the environment variables in the src/build/build.config.properties file specified. 
+2. Make sure you are able to connect to your database outside of the project. 
+
+JOOQ class errors during build: 
+
+1. Make sure your database is up to date. 
+2. See troubleshooting on connection issues. 
+
+Micronaut error, variable XXX is not specified: 
+
+1. Make sure your application-dev.yml file exists. 
+
+Installation error for bi-jooq-codegen during build. 
+
+1. Make sure your build command includes `--settings settings.xml`
+2. Make sure you specified environment variables for `GITHUB_ACTOR` and `GITHUB_TOKEN`
+3. Make sure your `GITHUB_TOKEN` is valid and that you have access to the bi-jooq-codegen repo. 
+4. See bi-jooq-codegen to make sure everything is setup correctly for pulling the repository, https://github.com/Breeding-Insight/bi-jooq-codegen. 
+
+Value ${SOME_VARIABLE} is not specified/found/valid. 
+1. Check you have the mentioned variable specified in your IntelliJ run configuration or system variables. 
+2. Make sure you are running your commands through IntelliJ run configuration if using that option. 
+
+Placeholder ${SOME_VALUE} is not specified/found/valid.
+1. Make sure your application-dev.yml and application-test.yml files are up to date with makeApplication-dev.yml.sh and makeApplication-test.yml.sh files. 
